feat(training): Add implementation for enrollment table
